--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,10 +9,12 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>Some title</td>
-            <td>Some description</td>
-            <td>Placeholder</td>
-        </tr>
+        <%@articles.each do |article|%>
+            <tr>
+                <td><%= article.title%></td>
+                <td><%= article.description%></td>
+                <td>Placeholder</td>
+            </tr>
+        <%end%>
     </tbody>
 </table>
