--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,3 +7,7 @@
 <p>
     <strong>Descripton: </strong><%=@article.description%>
 </p>
+
+<%= link_to 'Edit', edit_article_path(@article)%> |
+<%= link_to 'delete', article_path(@article), method: :delete, data: {confirm: "Are you sure?"}%> |
+<%= link_to 'Return to articles listing', articles_path%> 
