--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,26 +1,19 @@
-<h1>Articles listing page</h1>
+<h1 class="text-center mt-4">Listing All Articles</h1>
 
-<table>
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Descripton</th>
-            <th colspan="3">Aaction</th>
-        </tr>
-    </thead>
-    <tbody>
-        <%@articles.each do |article|%>
-            <tr>
-                <td><%= article.title%></td>
-                <td><%= article.description%></td>
-                <td><%= link_to 'Show', article_path(article)%></td>
-                <td><%= link_to 'Edit', edit_article_path(article)%></td>
-                <td><%= link_to 'Delete', article_path(article),method: :delete, data: {confirm: "Are you sure?"}%></td>
-            </tr>
-        <%end%>
-    </tbody>
-</table>
-
-<p><%= link_to 'Create new article', new_article_path %></p> 
-<%= link_to 'Home page', root_path%>|
-<%= link_to 'About page', about_path%> 
+<div class="container">
+    <%@articles.each do |article|%>
+        <div class="card text-center">
+        <div class="card-header">
+            Featured
+        </div>
+        <div class="card-body">
+            <h5 class="card-title"><%= article.title%></h5>
+            <p class="card-text"><%= article.description%></p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+        <div class="card-footer text-muted">
+            2 days ago
+        </div>
+        </div>
+    <%end%>
+</div>
