--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,14 @@
   color: white !important;
 }
 
+#stock-logo {
+  text-shadow: 4px 4px #2e2f2e;
+}
+
+#stock-logo-msg {
+  text-shadow: 2px 2px #2e2f2e;
+}
+
 #logo {
   float: left;
   font-size: 1.7em;
