--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,19 +1,27 @@
-<h1 class="text-center mt-4">Listing All Articles</h1>
-
-<div class="container">
-    <%@articles.each do |article|%>
-        <div class="card text-center">
-        <div class="card-header">
-            Featured
-        </div>
-        <div class="card-body">
-            <h5 class="card-title"><%= article.title%></h5>
-            <p class="card-text"><%= article.description%></p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-        <div class="card-footer text-muted">
-            2 days ago
-        </div>
-        </div>
-    <%end%>
+<div id="page-content">
+    <h1 class="text-center mt-4">Listing All Articles</h1>
+    <div class="container">
+        <%@articles.each do |article|%>
+            <div class="row justify-content-md-center">
+                <div class="col-8 mt-4">
+                    <div class="card text-center shadow mb-5 bg-white rounded">
+                        <div class="card-header font-italic">
+                            by NEO
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success"%></h5>
+                            <p class="card-text"><%= truncate(article.description, length: 100) %></p>
+                            <a><%= link_to 'Show', article_path(article), class: "btn btn-outline-info" %></a>
+                            <a><%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %></a>
+                            <a><%= link_to 'Delete', article_path(article),class: "btn btn-outline-danger",method: :delete, data: {confirm: "Are you sure?"}
+                            %></a>
+                        </div>
+                        <div class="card-footer text-muted">
+                            <small> Created <%= time_ago_in_words(article.created_at) %> ago, edited <%= time_ago_in_words(article.updated_at) %> ago</small>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+        <%end%>
+    </div>
 </div>
