--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 <div id="page-content">
     <div class="container" id="home-container">
         <div class="jumbotron text-center text-white">
-            <h1 class="display-4">Stock Blog!</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <h1 class="display-4 font-weight-bold"id="stock-logo" >Stock Blog!</h1>
+            <p class="lead font-weight-bold" id="stock-logo-msg">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
             <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <a class="btn btn-success btn-lg" href="#" role="button">Sign Up!</a>
+            <p class="font-weight-bold" id="stock-logo-msg">It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <a class="btn btn-success btn-lg shadow arunded" href="#" role="button">Sign Up!</a>
         </div>
     </div>
 </div>
@@ -13,6 +13,6 @@
 
 <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
     <div class="container text-center">
-        <small>Copyright &copy; <%= link_to "Youtube", "https://www.youtube.com/channel/UCxLKNGxHTIrTAuV3gQAuv4Q", class: "text-white"%></small>
+        <small>Copyright &copy; <%= link_to "NEO", "https://www.youtube.com/channel/UCxLKNGxHTIrTAuV3gQAuv4Q", class: "text-white"%></small>
     </div>
 </footer>
