--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -20,7 +20,9 @@
                 </div>
             <%end%>
         </div>
-        <%= link_to '[Cancel and return to articles listing]', articles_path%> 
+        <div class="mt-4">
+            <%= link_to '[Cancel and return to articles listing]', articles_path%> 
+        </div>
     </div>
 </div>
 
