--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,8 @@
         <p class="lead font-weight-bold" id="stock-logo-msg">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
         <hr class="my-4">
         <p class="font-weight-bold" id="stock-logo-msg">It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-success btn-lg shadow arunded" href="#" role="button">Sign Up!</a>
+        <%# <a class="btn btn-success btn-lg shadow arunded" href="#" role="button">Sign Up!</a> %>
+        <%= link_to "Sign up!",signup_path, class:"btn btn-success btn-lg shadow arunded" %>
     </div>
 </div>
 
