Add edit template and update action

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="from-group row mt-4 justify-content-center">
-                    <%= f.submit "Sign up", class: "btn btn-outline-success btn-lg text-dark"%>
+                    <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class: "btn btn-outline-success btn-lg text-dark")%>
                 </div>
             <%end%>
         </div>
