--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,9 @@
                         <%= link_to gravatar_for(user,size:150),user_path(user) %></h5>
                         <p class="card-text"><%= pluralize(user.articles.count, "article") %></p>
                         <a><%= link_to 'View profile', user_path(user), class: "btn btn-outline-info" %></a>
-                        <a><%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %></a>
+                        <% if logged_in? && user == current_user %>
+                            <a><%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %></a>
+                        <% end %>
                     </div>
                     <div class="card-footer text-muted">
                         <small> Joined <%= time_ago_in_words(user.created_at) %> ago</small>
