--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -13,9 +13,11 @@
                         <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success"%></h5>
                         <p class="card-text"><%= truncate(article.description, length: 100) %></p>
                         <a><%= link_to 'View', article_path(article), class: "btn btn-outline-info" %></a>
-                        <a><%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %></a>
-                        <a><%= link_to 'Delete', article_path(article),class: "btn btn-outline-danger",method: :delete, data: {confirm: "Are you sure?"}
-                        %></a>
+                        <% if logged_in? && article.user == current_user %>
+                            <a><%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %></a>
+                            <a><%= link_to 'Delete', article_path(article),class: "btn btn-outline-danger",method: :delete, data: {confirm: "Are you sure?"}
+                            %></a>
+                        <% end %>
                     </div>
                     <div class="card-footer text-muted">
                         <small> Created <%= time_ago_in_words(article.created_at) %> ago, edited <%= time_ago_in_words(article.updated_at) %> ago</small>
