--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -13,7 +13,7 @@
                         <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success"%></h5>
                         <p class="card-text"><%= truncate(article.description, length: 100) %></p>
                         <a><%= link_to 'View', article_path(article), class: "btn btn-outline-info" %></a>
-                        <% if logged_in? && article.user == current_user %>
+                        <% if logged_in? && (article.user == current_user || current_user.admin?) %>
                             <a><%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %></a>
                             <a><%= link_to 'Delete', article_path(article),class: "btn btn-outline-danger",method: :delete, data: {confirm: "Are you sure?"}
                             %></a>
