--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,11 +14,17 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">
-                        <%= link_to gravatar_for(user,size:150),user_path(user) %></h5>
+                        <%= link_to gravatar_for(user,size:150),user_path(user) %>
+                        </h5>
                         <p class="card-text"><%= pluralize(user.articles.count, "article") %></p>
-                        <a><%= link_to 'View profile', user_path(user), class: "btn btn-outline-info" %></a>
-                        <% if logged_in? && user == current_user %>
-                            <a><%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %></a>
+                        <%= link_to 'View profile', user_path(user), class: "btn btn-outline-info" %>
+                        <% if logged_in? %> 
+                            <% if user == current_user %>
+                                <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %>
+                            <% end %>
+                            <% if current_user.admin? %>
+                                <%= link_to 'Delete user', user_path(user), class: "btn btn-outline-danger",  method: :delete, data:{confirm: "Are you sure you want to delete the user accoutn and all associated articles?"} %>
+                            <% end %>
                         <% end %>
                     </div>
                     <div class="card-footer text-muted">
